# dual-screen-viewer

./: README.md  index.html  package-lock.json  package.json  secondary.html  vite.config.ts
.github/workflows/: release.yml
src/: LayerPanel.ts  events.ts  fog.ts  grid.ts  handles.ts  main.ts  measurement.ts  pan.ts  panelResize.ts  renderer.ts  secondary.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
