[package]
name = "dual-screen-viewer"
version = "0.1.0"
description = "Dual-screen tabletop RPG image viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "dual_screen_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

